dv - Fixed Heading spacing

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ div.heading {
   margin-top: 5px;
   background-color: #6B9080;
   display: flex;
+  flex-wrap: nowrap;
 }
 
 div.heading img {
